--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -12,10 +12,12 @@
     "@testing-library/user-event": "^13.2.1",
     "framer-motion": "^5.5.5",
     "react": "^17.0.2",
+    "react-animate-text": "^0.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "rxjs": "^7.5.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
